Fixed a bug where the standard menu didn't fit on Safari browser

--- a/internet-style.css
+++ b/internet-style.css
@@ -67,7 +67,7 @@
 }
 
 /*Auto-move video frame*/
-@media screen and (min-width: 1326px) {
+@media screen and (min-width: 1336px) {
     .content .frame {
         left: -240px;
     }
